--- a/data/unknown.json
+++ b/data/unknown.json
@@ -13,6 +13,12 @@
             "link": "https://youtu.be/SyCAEvHFsQs",
             "percent": 100,
             "hz": 86655
+        },
+        {
+            "user": "Drake",
+            "link": "https://youtu.be/DX_8e7KmkVs",
+            "percent": 79,
+            "hz": "~120k"
         }
     ]
 }
