--- a/data/unknown.json
+++ b/data/unknown.json
@@ -2,7 +2,7 @@
     "id": 88203501,
     "name": "UNKNOWN",
     "author": "NineDice",
-    "creators": ["GhostVandalf"],
+    "creators": ["GhostVandalf", "Iris", "Gusearth", "DrCuber", "NineDice", "Renn241"],
     "verifier": "Scizor",
     "verification": "https://www.youtube.com/watch?v=RB3I8J4iQgc",
     "percentToQualify": 67,
