--- a/data/unknown.json
+++ b/data/unknown.json
@@ -4,7 +4,7 @@
     "author": "NineDice",
     "creators": ["GhostVandalf", "Iris", "Gusearth", "DrCuber", "NineDice", "Renn241"],
     "verifier": "Scizor",
-    "verification": "https://www.youtube.com/watch?v=RB3I8J4iQgc",
+    "verification": "https://www.youtube.com/watch?v=d7l0ZHJcxXs",
     "percentToQualify": 67,
     "password": "Medium",
     "records": [
