--- a/data/unknown.json
+++ b/data/unknown.json
@@ -16,9 +16,9 @@
         },
         {
             "user": "Drake",
-            "link": "https://youtu.be/DX_8e7KmkVs",
+            "link": "https://youtu.be/kZcrPk6-vEc",
             "percent": 93,
-            "hz": "~120k"
+            "hz": "~135k"
         }
     ]
 }
