--- a/data/unknown.json
+++ b/data/unknown.json
@@ -16,9 +16,9 @@
         },
         {
             "user": "Drake",
-            "link": "https://youtu.be/kZcrPk6-vEc",
-            "percent": 93,
-            "hz": "~135k"
+            "link": "https://www.youtube.com/watch?v=e8h41gxUTFQ",
+            "percent": 100,
+            "hz": "195376"
         }
     ]
 }
